# dataeng-q3-2025

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  HOWTO.md  Makefile  NOTES.md  README.md  docker-compose.yml  pyproject.toml
migrations/: V1__create_transactions_table.sql  V2__add_lineage_columns.sql
pipeline/: batch.py  main.py  pyproject.toml
pipeline/application/batch/orchestration/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
pipeline/application/batch/orchestration/dags/: batch_pipeline_dag.py
pipeline/application/batch/service/: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
pipeline/application/streaming/consumer/: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
pipeline/application/streaming/producer/: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
pipeline/batch/: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
pipeline/core/: __init__.py
pipeline/infrastructure/: __init__.py  api.py  database.py  utils.py
pipeline/models/: __init__.py  schemas.py
pipeline/streaming/consumer/: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
pipeline/streaming/producer/: .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
pipeline/utils/: __init__.py  data_loader.py  database.py
