[project]
name = "pipeline"
version = "0.1.0"
description = "Python service to run predictions in both batch and real-time modes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.25",
    "fsspec>=2026.1.0",
    "polars>=0.19.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.5.1",
    "requests>=2.32.5",
    "s3fs>=0.4.2",
    "sqlalchemy>=2.0.45",
]
